# LR5e

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/: tasks_.c  tasks_.h
string/tests_str_library/: tests_str_library_.c
string/tests_tasks/: tests_tasks_.c  tests_tasks_.h
